added cloudinary js dependencies
still need to upload the library files!

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 		<!-- Reference to your JavaScript file -->
 		<script src="app.js"></script>
 
+		<!-- Reference to cloudinary dependencies -->
+		<script src="lodash.js" type="text/javascript"></script>
+		<script src="cloudinary-core.js" type="text/javascript"></script>
+		<!-- ^^ Still need to upload these js libraries! ^^ -->
+		
 		<!-- Reference to adapter.js -->
 		<script src="adapter-min.js"></script>
 
